virt01/manual/torrent/jellyseerr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      serviceAccountName: jellyseerr-sa
      containers:
        - name: jellyseerr
          image: harbor.nf.lab/proxy.docker.io/fallenbagel/jellyseerr
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
              name: jellyseerr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: jellyseerr-pv
              mountPath: /app/config
      volumes:
        - name: jellyseerr-pv
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
