virt01/manual/torrent/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-svc
  labels:
    app: jellyseerr
  annotations:    
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: "jellytest.nforcer.com"
#    external-dns.alpha.kubernetes.io/target: "dual.nforcer.com"
spec:
  ports:
    - port: 5055
      protocol: TCP
      name: jellyseerr-svc-port
  selector:
    app: jellyseerr
